# armpap

./: readme.md
armpap_control/: CMakeLists.txt  package.xml
armpap_control/config/: armpap_control.yaml
armpap_control/launch/: armpap_control.launch
armpap_control/scripts/: armpap_control.py  armpap_control.ui  armpap_control_key.py  armpap_ros.py
armpap_description/: CMakeLists.txt  package.xml
armpap_description/config/: armpap.yaml  gripper.yaml
armpap_description/launch/: armpap_rviz.launch
armpap_description/meshes/armpap/: base_link.stl  base_link00.stl  link_left01.stl  link_left02.stl  link_right01.stl  motor_base.stl  motor_left.stl  motor_right.stl
armpap_description/meshes/gripper/: gripper_base.stl  gripper_left.stl  gripper_right.stl
armpap_description/rviz/: armpap.rviz  armpap_description.rviz
armpap_description/urdf/: armpap.urdf.xacro  common.urdf.xacro  gazebo.xacro
armpap_gazebo/: CMakeLists.txt  package.xml
armpap_gazebo/launch/: armpap_gazebo.launch
armpap_msg/: CMakeLists.txt  package.xml
armpap_msg/msg/: armpap_msg.msg
