<?xml version="1.0"?>
<package format="2">
  <name>armpap_control</name>
  <version>0.0.0</version>
  <description>The armpap_control package</description>
  <maintainer email="aescuredo@todo.todo">aescuredo</maintainer>
  
  <license>BSD</license>
 
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>effort_controllers</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
